fix bug with activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,6 +57,8 @@ I want see you smile always, Ihor!"
         android:id="@+id/pv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
         app:pv_alpha="70"
         app:pv_color="#000"
         app:pv_icon="@drawable/newsong"
